MFC 351481, 357619:

Approved by:	bcr (mentor), hselasky (src)
Differential Revision:	https://reviews.freebsd.org/D24058

mixer(8): Report an error if the passed value is an empty string

This patch fixes a bug that made the mixer command enter
an infinite loop when instructed to set the value of a device
to an empty string (e.g., `mixer vol ""`).

Additionally, some tests for mixer(8) are being added.

PR:		240039
Reviewed by:	hselasky, mav
Approved by:	src (hselasky, mav)
Differential Revision:	https://reviews.freebsd.org/D21409

mixer: call the cleanup function in a test

The set_empty_value test has a cleanup function, but is not called.
Fix it

Reviewed by:	0mp
Approved by:	kp
Differential Revision:	https://reviews.freebsd.org/D23498